hoang 6/12 manage_teacher

--- a/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper ">
         <!-- Sidebar -->
-        <aside id="sidebar" style="margin-top:60px;position:fixed;height:93%">
+        <aside id="sidebar"class="collapsed" style="margin-top:60px;position:fixed;height:93%">
             <div class="h-100 bg-primary">
                 <div class="sidebar-logo">
                     <a href="~/Areas/Admin/Views/HomeAdmin/Index.cshtml">Phố thị Music <br /><p>Trung tâm quản lý</p></a>
