--- a/Areas/Admin/Views/HomeAdmin/Add_Teacher.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Add_Teacher.cshtml
@@ -1,20 +1,19 @@
-﻿
-@{
-    ViewBag.Title = "Thêm học viên";
+﻿@{
+    ViewBag.Title = "Thêm giáo viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml";
     web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
 }
 <div class="row">
-    <div class="col display-5" style="text-align:center">Thêm học viên</div>
+    <div class="col display-5" style="text-align:center">Thêm giáo viên</div>
 </div>
 <Hr />
-<form class="row" action="@Url.Action("Submit_Add_Student", "HomeAdmin", new { area = "Admin" })" id="inputForm">
+<form class="row" action="@Url.Action("Submit_Add_Teacher", "HomeAdmin", new { area = "Admin" })" id="inputForm">
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label for="" class="form-label">Mã học viên:</label>
+        <label for="" class="form-label">Mã giáo viên:</label>
         <input type="text" class="form-control" id="mahv" placeholder="Mã" name="Ma">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label for="" class="form-label">Tên học viên:</label>
+        <label for="" class="form-label">Tên giáo viên:</label>
         <input type="text" class="form-control" id="tenhv" placeholder="Tên" name="Ten">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
@@ -45,13 +44,12 @@
         <label>Phân quyền:</label>
         <select class="form-select mt-2" id="selphanquyen" name="PhanQuyen">
             <option value="">Nhấn để chọn</option>
-            <option value="true">Học viên</option>
+            <option value="false">Giáo viên</option>
         </select>
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label>Các lớp học tham gia:</label>
-        <select class="form-select mt-2" id="sellophv" name="Lop">
-            <option value="">Nhấn để chọn</option>
+        <label>Lớp học tham gia giảng dạy:</label>
+        <select class="form-select mt-2" id="sellopgv" multiple name="Lop">
             @foreach (var lop in db.LopHocs.ToList())
             {
                 <option value="@lop.Ma_lop">@lop.Ten_lop_hoc</option>
@@ -59,23 +57,35 @@
         </select>
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label for="" class="form-label">Thêm lớp học:</label>
-        <input type="text" class="form-control" id="lop" placeholder="lớp" name="ThemLop" value="">
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label>Trạng thái học phí:</label>
-        <select class="form-select mt-2" id="selhocphi" name="HocPhi">
-            <option value="">Nhấn để chọn</option>
-            <option value="true">Đã đóng học phí</option>
-            <option value="false">Chưa đóng học phí</option>
+        <label>Chuyên môn:</label>
+        <select class="form-select mt-2" id="selChuyenMon" multiple name="ChuyenMon">
+            <option value="Piano">Piano</option>
+            <option value="Organ">Organ</option>
+            <option value="Cajun">Cajun</option>
+            <option value="Guitar">Guitar</option>
         </select>
     </div>
+    <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
+        <label for="" class="form-label">Mã Bảng Lương:</label>
+        <input type="text" class="form-control" id="BangLuong" placeholder="Mã bảng lương" name="MaBangLuong">
+    </div>
+    <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
+        <label for="" class="form-label">Lương cơ bản:</label>
+        <input type="number" class="form-control" id="LuongCoBan" placeholder="Lương cơ bản" name="LuongCoBan">
+    </div>
+    <br />
     <div class="row d-grid gap-2">
         <input class="btn btn-success" type="submit" name="submit" value="Lưu">
     </div>
 </form>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
+    //document.getElementById("btnSubmit").addEventListener("click", function () {
+    //    var selectElement = document.getElementById("selChuyenMon");
+    //    var selectedOptions = Array.from(selectElement.selectedOptions).map(option => option.value);
+    //    var resultString = selectedOptions.join(', ');
+    //    var resultSelChuyenMon = document.getElementById('selChuyenMon').value.add(resultString)
+    //},
     $(document).ready(function () {
         var form = document.getElementById('inputForm');
         form.addEventListener('submit', function (event) {
@@ -93,13 +103,15 @@
             checkSelects.forEach(function (select) {
                 if (select.value.trim() === "") {
                     event.preventDefault();
-                    input.classList.add('is-invalid');
+                    select.classList.add('is-invalid');
                 }
                 else {
-                    input.classList.remove('is-invalid')
+                    select.classList.remove('is-invalid')
                 }
             });
+            
         });
-    });
+    }));
 </script>
+
 
