--- a/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
@@ -1,8 +1,110 @@
-﻿
+﻿@model List<web2.Models.GiaoVien>
 @{
     ViewBag.Title = "Quản lý giáo viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml";
+    web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
 }
 
-<h2>Manage_Teacher</h2>
-
+<div class="container">
+    <div class="row">
+        <div class="col display-5" style="text-align:center">Quản lý giáo viên</div>
+    </div>
+    <div class="row pt-5">
+        <div class="col-sm-12 col-md-6 col-xl-6 ">
+            <p>Chọn lớp:</p>
+            <select class="form-select mt-3" id="selhv" name="sellistlophoc">
+                @foreach (var lop in db.LopHocs.ToList())
+                {
+                    <option value="@lop.Ma_lop">@lop.Ten_lop_hoc</option>
+                }
+            </select>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-6">
+            <p>Nhập mã giáo viên:</p>
+            <form class="input-group" method="post" action="@Url.Action("Find_Teacher", "HomeAdmin", new { area = "Admin" })">
+                <span class="input-group-text">Mã giáo viên</span>
+                <input type="text" class="form-control" name="maGiaoVienInput" placeholder="ex: gv01,..">
+                <button type="submit" class="btn btn-success">Tìm</button>
+            </form>
+        </div>
+    </div>
+    <div class="row d-grid gap-2 mt-4 mb-3">
+        <a>@Html.ActionLink("Thêm giáo viên mới", "Add_Teacher", "HomeAdmin", new { area = "Admin" }, new { @class = "btn btn-success" })</a>
+    </div>
+    <hr />
+    <div class="row">
+        <h3 class="col" style="text-align:center">Bảng kết quả</h3>
+    </div>
+    <div class="row">
+        <table class="table " style="text-align:center">
+            <thead class="bg-info bg-gradient">
+                <tr>
+                    <th>Mã</th>
+                    <th>Họ và tên</th>
+                    <th>Ngày sinh</th>
+                    <th>Số điện thoại</th>
+                    <th>Email</th>
+                    <th>Địa chỉ</th>
+                    <th>Tài khoản</th>
+                    <th>Mật khẩu</th>
+                    <th>Phân quyền</th>
+                    <th>Chuyên môn</th>
+                    <th>Lương cơ bản</th>
+                    <th>Dạy lớp</th>
+                    <th colspan="2">Thao tác</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Ma_giao_vien</td>
+                        <td>@item.Ho_va_ten</td>
+                        <td>@item.NgaySinhFormatted</td>
+                        <td>@item.Sdt</td>
+                        <td>@item.Email</td>
+                        <td>@item.Dia_chi</td>
+                        <td>@item.Tai_khoan</td>
+                        <td>@item.Mat_khau</td>
+                        @if (item.Phan_quyen == true)
+                        {
+                            <td>Học viên</td>
+                        }
+                        else if (item.Phan_quyen == false)
+                        {
+                            <td>Giáo viên</td>
+                        }
+                        <td>@item.Chuyen_mon</td>
+                        <td>@item.Luong_co_ban</td>
+                        <td>@item.Ma_lop_giang_day</td>
+                        <td colspan="2" style="display:inline-flex">
+                            <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maGiaoVien = item.Ma_giao_vien }, new { @class = "btn btn-primary" })</a>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Xoá</button>
+                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5 text-danger" id="deleteModalLabel">Bạn có chắc nhắn muốn xoá Giáo viên @item.Ho_va_ten không?</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Toàn bộ thông tin của giáo viên @item.Ho_va_ten, với mã là @item.Ma_giao_vien sẽ được xoá toàn bộ!!!
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Huỷ</button>
+                                            <form id="form-delete-@item.Ma_giao_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
+                                                <input type="hidden" name="maHocVien" value="@item.Ma_giao_vien" />
+                                                <button type="submit" class="btn btn-success">Xoá</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        
+    </div>
+</div>
