--- a/Areas/Teacher/Views/HomeTeacher/Index.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Index.cshtml
@@ -1,5 +1,41 @@
-﻿@{
+﻿@model web2.Models.GiaoVien
+@{
     Layout = "~/Areas/Teacher/Views/Shared/_LayoutPageTeacher.cshtml";
 }
 
+<section id="teacher-dashboard">
+    <h2 style="padding-top:20px">Hello, @Model.Ma_giao_vien!</h2>
+    <p>This is your dashboard. You can manage various aspects of your teaching here.</p>
 
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Manage Documents</h5>
+                    <p class="card-text">Upload, view, and manage documents for your classes.</p>
+                    <a href="@Url.Action("Manage_Document", "HomeTeacher")" class="btn btn-primary">Go to Documents</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Manage Classes</h5>
+                    <p class="card-text">View and manage details of your classes.</p>
+                    <a href="@Url.Action("Manage_Classes", "HomeTeacher")" class="btn btn-primary">Go to Classes</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Manage Schedule</h5>
+                    <p class="card-text">View and manage your teaching schedule.</p>
+                    <a href="@Url.Action("Manage_Schedule", "HomeTeacher")" class="btn btn-primary">Go to Schedule</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
