--- a/Areas/Teacher/Views/HomeTeacher/Manage_Schedule.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Schedule.cshtml
@@ -1,5 +1,41 @@
 ﻿@{
+    ViewBag.Title = "Manage Schedule";
     Layout = "~/Areas/Teacher/Views/Shared/_LayoutPageTeacher.cshtml";
 }
 
+<h2 class="mb-4">Manage Schedule</h2>
 
+<div class="row">
+    <div class="col-md-12">
+        <h3>Class Timetable</h3>
+
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                    <th>Sunday</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr>
+                    <td>8:AM</td>
+                    <td>Class A</td>
+                    <td>Class B</td>
+                    <td>Class C</td>
+                    <td>Class D</td>
+                    <td>Class E</td>
+                    <td>Class F</td>
+                    <td>Class G</td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+</div>
