--- a/Areas/Admin/Views/HomeAdmin/Add_Student.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Add_Student.cshtml
@@ -27,7 +27,7 @@
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label for="" class="form-label">Email:</label>
-        <input type="text" class="form-control" id="email" placeholder="Email" name="Email">
+        <input type="email" class="form-control" id="email" placeholder="Email" name="Email">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label for="" class="form-label">Địa chỉ:</label>
@@ -57,10 +57,6 @@
                 <option value="@lop.Ma_lop">@lop.Ten_lop_hoc</option>
             }
         </select>
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
-        <label for="" class="form-label">Thêm lớp học:</label>
-        <input type="text" class="form-control" id="lop" placeholder="lớp" name="ThemLop" value="">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label>Trạng thái học phí:</label>
