--- a/Areas/Student/Views/HomeStudent/settingAccount.cshtml
+++ b/Areas/Student/Views/HomeStudent/settingAccount.cshtml
@@ -40,6 +40,9 @@
                                 <strong>Email:</strong> <input type="email" class="form-control" value="abc@Gmail.com" />
                             </li>
                             <li class="list-group-item">
+                                <strong>Địa Chỉ:</strong> <input type="text" class="form-control" value="180 Cao lỗ" />
+                            </li>
+                            <li class="list-group-item">
                                 <strong>Số điện thoại:</strong> <input type="number" class="form-control" value="0987654321">
                             </li>
                             <li class="list-group-item">
